<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:src="@drawable/coffee_shop"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:id="@+id/order_menu"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/icons"
                android:paddingBottom="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:text="Item: "/>
                <Spinner
                    android:id="@+id/menuitem_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/icons"/>

            </LinearLayout>


            <!-- Linear layout to  input number of items-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textColor="@color/icons"
                    android:text="@string/no_of_items" />

                <TextView
                    android:id="@+id/no_of_item_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textColor="@color/icons"
                    android:text="@string/no_of_item_input" />

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/plus"
                    android:textColor="@color/green" />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/minus"
                    android:textColor="@color/red" />


            </LinearLayout>

            <CheckBox
                android:id="@+id/check_box_1"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:text="@string/check_box_1" />

            <CheckBox
                android:id="@+id/check_box_2"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:text="@string/check_box_2" />

            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/green"
                android:text="@string/submit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/summary_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/summary_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/summary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/edit_order_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/edit_order" />
                <Button
                    android:id="@+id/order_now_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/place_order" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thank_you_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/thank_you"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/new_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/green"
                android:text="@string/new_order" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
